# fastapi-demo

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 08878701091d_create_users_table.py
app/: database.py  main.py  models.py
app/routers/: users.py
