[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.15.2",
    "cryptography>=45.0.2",
    "fastapi>=0.115.12",
    "pydantic>=2.11.4",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
